[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main Menu/bgMainMenu.jpg" type="Texture" id=1]
[ext_resource path="res://Main Menu/8bitOperatorPlus8-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Main/Textures/ButtonSound.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="TitleVbox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
custom_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/TitleVbox"]
margin_right = 1000.0

[node name="Title" type="Label" parent="MarginContainer/TitleVbox"]
margin_top = 60.0
margin_right = 1000.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.670588, 0.192157, 1 )
custom_constants/shadow_offset_x = -8
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Blackjack :3"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 290.0
margin_right = 709.0
margin_bottom = 576.0
custom_constants/separation = 18
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 419.0
margin_bottom = 99.0

[node name="start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0.294118, 0.741176, 0.266667, 1 )
margin_top = 117.0
margin_right = 419.0
margin_bottom = 166.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"
icon_align = 1

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 419.0
margin_bottom = 184.0

[node name="quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0.294118, 0.741176, 0.266667, 1 )
margin_top = 202.0
margin_right = 419.0
margin_bottom = 251.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
icon_align = 1

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 419.0
margin_bottom = 269.0

[node name="High Scores" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 0.294118, 0.741176, 0.266667, 1 )
margin_top = 287.0
margin_right = 419.0
margin_bottom = 336.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "High Scores"
icon_align = 1

[node name="Separator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 419.0
margin_bottom = 354.0

[node name="Name&Class" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 372.0
margin_right = 419.0
margin_bottom = 477.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.670588, 0.192157, 1 )
custom_constants/shadow_offset_x = -8
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Amra Hozic
ENS102"
align = 1
valign = 1

[node name="BSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/High Scores" to="." method="_on_High_Scores_pressed"]
